# pcurate

./: .gitignore  LICENSE  README.md  pyproject.toml
src/: pcurate.py
tests/: test_pcurate.py
